Update Mini Bank app folder

--- a/mini-bank/about.html
+++ b/mini-bank/about.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
-		<link rel="apple-touch-icon" href="/favicon.png">
+		<link rel="apple-touch-icon" href="./favicon.png">
 		<meta
 			name="apple-mobile-web-app-status-bar-style"
 			content="black-translucent"
 		/>
 		<meta name="viewport" content="initial-scale=1, viewport-fit=cover, user-scalable=no" />	
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-a159e3a9.css" rel="stylesheet"><title>About</title><!-- HEAD_svelte-1ds1qyu_START --><meta name="description" content="About this app"><!-- HEAD_svelte-1ds1qyu_END -->
+		<link href="./build/immutable/assets/_layout-a159e3a9.css" rel="stylesheet"><title>About</title><!-- HEAD_svelte-1ds1qyu_START --><meta name="description" content="About this app"><!-- HEAD_svelte-1ds1qyu_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		
