--- a/mini-bank/index.html
+++ b/mini-bank/index.html
@@ -3,23 +3,23 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
-		<link rel="apple-touch-icon" href="/favicon.png">
+		<link rel="apple-touch-icon" href="./favicon.png">
 		<meta
 			name="apple-mobile-web-app-status-bar-style"
 			content="black-translucent"
 		/>
 		<meta name="viewport" content="initial-scale=1, viewport-fit=cover, user-scalable=no" />	
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-a159e3a9.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page-a34bd38a.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-cbb8ce29.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-a623bc35.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-b4558327.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-eeb6cf27.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-5993b49f.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-2d5eeadb.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.js-dc85b7cd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Home</title><!-- HEAD_svelte-6eemol_START --><meta name="description" content="Mini-Bank"><!-- HEAD_svelte-6eemol_END -->
+		<link href="./build/immutable/assets/_layout-a159e3a9.css" rel="stylesheet">
+		<link href="./build/immutable/assets/_page-a34bd38a.css" rel="stylesheet">
+		<link rel="modulepreload" href="./build/immutable/start-81e83801.js">
+		<link rel="modulepreload" href="./build/immutable/chunks/index-a623bc35.js">
+		<link rel="modulepreload" href="./build/immutable/chunks/singletons-440044e9.js">
+		<link rel="modulepreload" href="./build/immutable/components/pages/_layout.svelte-db1a0b59.js">
+		<link rel="modulepreload" href="./build/immutable/chunks/stores-97d7b9fa.js">
+		<link rel="modulepreload" href="./build/immutable/components/pages/_page.svelte-dbc0e9a1.js">
+		<link rel="modulepreload" href="./build/immutable/modules/pages/_page.js-dc85b7cd.js">
+		<link rel="modulepreload" href="./build/immutable/chunks/_page-da46b06b.js"><title>Home</title><!-- HEAD_svelte-6eemol_START --><meta name="description" content="Mini-Bank"><!-- HEAD_svelte-6eemol_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		
@@ -39,13 +39,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="1vcaddl">
-			import { start } from "./_app/immutable/start-cbb8ce29.js";
+			import { start } from "./build/immutable/start-81e83801.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1vcaddl"]').parentNode,
-				version: "1674331983737",
+				version: "1674332687239",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
