--- a/mini-bank/index.html
+++ b/mini-bank/index.html
@@ -3,21 +3,18 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="./favicon.png" />
-		<link rel="apple-touch-icon" href="./favicon.png">
-		<meta
-			name="apple-mobile-web-app-status-bar-style"
-			content="black-translucent"
-		/>
-		<meta name="viewport" content="initial-scale=1, viewport-fit=cover, user-scalable=no" />	
+		<link rel="apple-touch-icon" href="./favicon.png" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+		<meta name="viewport" content="initial-scale=1, viewport-fit=cover, user-scalable=no" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./build/immutable/assets/_layout-a159e3a9.css" rel="stylesheet">
-		<link href="./build/immutable/assets/_page-a34bd38a.css" rel="stylesheet">
-		<link rel="modulepreload" href="./build/immutable/start-81e83801.js">
-		<link rel="modulepreload" href="./build/immutable/chunks/index-a623bc35.js">
-		<link rel="modulepreload" href="./build/immutable/chunks/singletons-440044e9.js">
-		<link rel="modulepreload" href="./build/immutable/components/pages/_layout.svelte-db1a0b59.js">
-		<link rel="modulepreload" href="./build/immutable/chunks/stores-97d7b9fa.js">
-		<link rel="modulepreload" href="./build/immutable/components/pages/_page.svelte-dbc0e9a1.js">
+		<link href="./build/immutable/assets/_page-3f369344.css" rel="stylesheet">
+		<link rel="modulepreload" href="./build/immutable/start-c625b1ab.js">
+		<link rel="modulepreload" href="./build/immutable/chunks/index-47d25441.js">
+		<link rel="modulepreload" href="./build/immutable/chunks/singletons-f6ce3e2c.js">
+		<link rel="modulepreload" href="./build/immutable/components/pages/_layout.svelte-221fd93e.js">
+		<link rel="modulepreload" href="./build/immutable/chunks/stores-25052831.js">
+		<link rel="modulepreload" href="./build/immutable/components/pages/_page.svelte-991650a3.js">
 		<link rel="modulepreload" href="./build/immutable/modules/pages/_page.js-dc85b7cd.js">
 		<link rel="modulepreload" href="./build/immutable/chunks/_page-da46b06b.js"><title>Home</title><!-- HEAD_svelte-6eemol_START --><meta name="description" content="Mini-Bank"><!-- HEAD_svelte-6eemol_END -->
 	</head>
@@ -30,22 +27,21 @@
 
 	<main class="svelte-1fs2g73">
 
-<section class="svelte-1qh8nvm"><form><label>Account
-				<input class="upper-case svelte-1qh8nvm" value=""></label>
-
-			<button>GO</button></form></section></main>
+<section class="svelte-47c25g"><form><fieldset  class="svelte-47c25g"><label><input class="upper-case svelte-47c25g" value=""></label>
+				<button class="svelte-47c25g">🔍</button></fieldset></form>
+		<div class="loader svelte-47c25g" style="display:none"><svg version="1.1" id="L4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 52 100" enable-background="new 0 0 0 0" xml:space="preserve"><circle fill="#fff" stroke="none" cx="6" cy="50" r="6"><animate attributeName="opacity" dur="1s" values="0;1;0" repeatCount="indefinite" begin="0.1"></animate></circle><circle fill="#fff" stroke="none" cx="26" cy="50" r="6"><animate attributeName="opacity" dur="1s" values="0;1;0" repeatCount="indefinite" begin="0.2"></animate></circle><circle fill="#fff" stroke="none" cx="46" cy="50" r="6"><animate attributeName="opacity" dur="1s" values="0;1;0" repeatCount="indefinite" begin="0.3"></animate></circle></svg></div></section></main>
 
 	<footer class="svelte-11vntjt"><span class="svelte-11vntjt">© 2023 D-Velopment, Net.</span></footer></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1vcaddl">
-			import { start } from "./build/immutable/start-81e83801.js";
+		<script type="module" data-sveltekit-hydrate="1d5hzcq">
+			import { start } from "./build/immutable/start-c625b1ab.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1vcaddl"]').parentNode,
-				version: "1674332687239",
+				target: document.querySelector('[data-sveltekit-hydrate="1d5hzcq"]').parentNode,
+				version: "1674344940271",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
