--- a/mini-bank/index.html
+++ b/mini-bank/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
-		<link rel="apple-touch-icon" href="./favicon.png" />
+		<link rel="icon" href="./bank.png" />
+		<link rel="apple-touch-icon" href="./bank.png" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 		<meta name="viewport" content="initial-scale=1, viewport-fit=cover, user-scalable=no" />
 		<meta http-equiv="content-security-policy" content="">
@@ -41,7 +41,7 @@
 				env: {},
 				paths: {"assets":"","base":""},
 				target: document.querySelector('[data-sveltekit-hydrate="pe5e5m"]').parentNode,
-				version: "1674407643459",
+				version: "1674408537391",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
