--- a/mini-bank/about.html
+++ b/mini-bank/about.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
-		<link rel="apple-touch-icon" href="./favicon.png" />
+		<link rel="icon" href="./bank.png" />
+		<link rel="apple-touch-icon" href="./bank.png" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 		<meta name="viewport" content="initial-scale=1, viewport-fit=cover, user-scalable=no" />
 		<meta http-equiv="content-security-policy" content="">
