--- a/mini-bank/index.html
+++ b/mini-bank/index.html
@@ -9,14 +9,14 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./build/immutable/assets/_layout-a159e3a9.css" rel="stylesheet">
 		<link href="./build/immutable/assets/_page-3f369344.css" rel="stylesheet">
-		<link rel="modulepreload" href="./build/immutable/start-5ece0994.js">
+		<link rel="modulepreload" href="./build/immutable/start-dae51059.js">
 		<link rel="modulepreload" href="./build/immutable/chunks/index-47d25441.js">
 		<link rel="modulepreload" href="./build/immutable/chunks/singletons-f6ce3e2c.js">
 		<link rel="modulepreload" href="./build/immutable/components/pages/_layout.svelte-221fd93e.js">
 		<link rel="modulepreload" href="./build/immutable/chunks/stores-25052831.js">
-		<link rel="modulepreload" href="./build/immutable/components/pages/_page.svelte-9d22c846.js">
+		<link rel="modulepreload" href="./build/immutable/components/pages/_page.svelte-e123930a.js">
 		<link rel="modulepreload" href="./build/immutable/modules/pages/_page.js-dc85b7cd.js">
-		<link rel="modulepreload" href="./build/immutable/chunks/_page-da46b06b.js"><title>Home</title><!-- HEAD_svelte-6eemol_START --><meta name="description" content="Mini-Bank"><!-- HEAD_svelte-6eemol_END -->
+		<link rel="modulepreload" href="./build/immutable/chunks/_page-da46b06b.js"><title>Mini-Bank</title><!-- HEAD_svelte-27pv3k_START --><meta name="description" content="Mini-Bank"><!-- HEAD_svelte-27pv3k_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		
@@ -35,13 +35,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="pe5e5m">
-			import { start } from "./build/immutable/start-5ece0994.js";
+			import { start } from "./build/immutable/start-dae51059.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
 				target: document.querySelector('[data-sveltekit-hydrate="pe5e5m"]').parentNode,
-				version: "1674408537391",
+				version: "1674408688669",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
