--- a/mini-bank/index.html
+++ b/mini-bank/index.html
@@ -7,41 +7,44 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 		<meta name="viewport" content="initial-scale=1, viewport-fit=cover, user-scalable=no" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./build/immutable/assets/_layout-a159e3a9.css" rel="stylesheet">
-		<link href="./build/immutable/assets/_page-3f369344.css" rel="stylesheet">
-		<link rel="modulepreload" href="./build/immutable/start-078c90ef.js">
-		<link rel="modulepreload" href="./build/immutable/chunks/index-47d25441.js">
-		<link rel="modulepreload" href="./build/immutable/chunks/singletons-f6ce3e2c.js">
-		<link rel="modulepreload" href="./build/immutable/components/pages/_layout.svelte-221fd93e.js">
-		<link rel="modulepreload" href="./build/immutable/chunks/stores-25052831.js">
-		<link rel="modulepreload" href="./build/immutable/components/pages/_page.svelte-b52abdc1.js">
+		<link href="./build/immutable/assets/_layout-a02c23c6.css" rel="stylesheet">
+		<link href="./build/immutable/assets/_page-4850c8ec.css" rel="stylesheet">
+		<link rel="modulepreload" href="./build/immutable/start-c31a0ac2.js">
+		<link rel="modulepreload" href="./build/immutable/chunks/index-f90c03d8.js">
+		<link rel="modulepreload" href="./build/immutable/chunks/singletons-bce208e3.js">
+		<link rel="modulepreload" href="./build/immutable/components/pages/_layout.svelte-bb02827e.js">
+		<link rel="modulepreload" href="./build/immutable/chunks/stores-716fb08a.js">
+		<link rel="modulepreload" href="./build/immutable/modules/pages/_layout.js-9cbb603b.js">
+		<link rel="modulepreload" href="./build/immutable/chunks/_layout-da46b06b.js">
+		<link rel="modulepreload" href="./build/immutable/components/pages/_page.svelte-51765ef1.js">
 		<link rel="modulepreload" href="./build/immutable/modules/pages/_page.js-dc85b7cd.js">
 		<link rel="modulepreload" href="./build/immutable/chunks/_page-da46b06b.js"><title>Mini-Bank</title><!-- HEAD_svelte-27pv3k_START --><meta name="description" content="Mini-Bank"><!-- HEAD_svelte-27pv3k_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		
+		<div>
 
 
-<div class="app svelte-1fs2g73"><header class="svelte-soeb3x"><h1 class="svelte-soeb3x">MINI BANK</h1>
-	<nav style="display: none;" class="svelte-soeb3x"><ul class="svelte-soeb3x"><li aria-current="page" class="svelte-soeb3x"><a href="/" class="svelte-soeb3x">Home</a></li></ul></nav></header>
+<div class="app svelte-1fs2g73"><header class="svelte-14f5wgx"><a href="/" class="svelte-14f5wgx"><h1 class="svelte-14f5wgx">MINI<span class="black svelte-14f5wgx">BANK</span></h1></a>
+	<nav style="display: none;" class="svelte-14f5wgx"><ul class="svelte-14f5wgx"><li aria-current="page" class="svelte-14f5wgx"><a href="/" class="svelte-14f5wgx">Home</a></li></ul></nav></header>
 
 	<main class="svelte-1fs2g73">
 
-<section class="svelte-47c25g"><form><fieldset disabled class="svelte-47c25g"><label><input class="upper-case svelte-47c25g" value=""></label>
-				<button class="svelte-47c25g">🔍</button></fieldset></form>
-		<div class="loader svelte-47c25g" style="display:none"><svg version="1.1" id="L4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 52 100" enable-background="new 0 0 0 0" xml:space="preserve"><circle fill="#fff" stroke="none" cx="6" cy="50" r="6"><animate attributeName="opacity" dur="1s" values="0;1;0" repeatCount="indefinite" begin="0.1"></animate></circle><circle fill="#fff" stroke="none" cx="26" cy="50" r="6"><animate attributeName="opacity" dur="1s" values="0;1;0" repeatCount="indefinite" begin="0.2"></animate></circle><circle fill="#fff" stroke="none" cx="46" cy="50" r="6"><animate attributeName="opacity" dur="1s" values="0;1;0" repeatCount="indefinite" begin="0.3"></animate></circle></svg></div></section></main>
+<section class="svelte-1y814ih"><form><div style="position: relative;"><fieldset disabled class="svelte-1y814ih"><label><input class="upper-case united-width svelte-1y814ih" value=""></label>
+					<button class="svelte-1y814ih">🔍</button></fieldset>
 
-	<footer class="svelte-11vntjt"><span class="svelte-11vntjt">© 2023 D-Velopment, Net.</span></footer></div>
+				<div class="loader united-width svelte-1y814ih" style="display:none"><div style="display: flex; width: 3rem; height: 3rem;"><svg version="1.1" id="L4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 40 12" enable-background="new 0 0 0 0" xml:space="preserve"><circle fill="#f00" stroke="none" cx="6" cy="6" r="6"><animate attributeName="opacity" dur="1s" values="0;0.7;0" repeatCount="indefinite" begin="0.1"></animate></circle><circle fill="#0f0" stroke="none" cx="20" cy="6" r="6"><animate attributeName="opacity" dur="1s" values="0;0.7;0" repeatCount="indefinite" begin="0.2"></animate></circle><circle fill="#00f" stroke="none" cx="34" cy="6" r="6"><animate attributeName="opacity" dur="1s" values="0;0.7;0" repeatCount="indefinite" begin="0.3"></animate></circle></svg></div></div></div></form></section></main>
+
+	<footer class="svelte-1c5alfh"><span class="svelte-1c5alfh">© 2023 D-Velopment, Net.</span></footer></div>
 
 
-		<script type="module" data-sveltekit-hydrate="pe5e5m">
-			import { start } from "./build/immutable/start-078c90ef.js";
+		<script type="module" data-sveltekit-hydrate="8p6xw1">
+			import { start } from "./build/immutable/start-c31a0ac2.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="pe5e5m"]').parentNode,
-				version: "1674483107948",
+				target: document.querySelector('[data-sveltekit-hydrate="8p6xw1"]').parentNode,
+				version: "1674659177646",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
@@ -50,6 +53,6 @@
 				}
 			});
 		</script>
-	
+	</div>
 	</body>
 </html>
