--- a/mini-bank/index.html
+++ b/mini-bank/index.html
@@ -8,8 +8,8 @@
 		<meta name="viewport" content="initial-scale=1, viewport-fit=cover, user-scalable=no" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./build/immutable/assets/_layout-2a34c316.css" rel="stylesheet">
-		<link href="./build/immutable/assets/_page-a623f705.css" rel="stylesheet">
-		<link rel="modulepreload" href="./build/immutable/start-ee7158b2.js">
+		<link href="./build/immutable/assets/_page-ebf1b284.css" rel="stylesheet">
+		<link rel="modulepreload" href="./build/immutable/start-9c5c6d6a.js">
 		<link rel="modulepreload" href="./build/immutable/chunks/index-031533bf.js">
 		<link rel="modulepreload" href="./build/immutable/chunks/singletons-3e3fa64d.js">
 		<link rel="modulepreload" href="./build/immutable/components/pages/_layout.svelte-337c1b49.js">
@@ -17,7 +17,7 @@
 		<link rel="modulepreload" href="./build/immutable/chunks/stores-03f2ddc2.js">
 		<link rel="modulepreload" href="./build/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./build/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./build/immutable/components/pages/_page.svelte-3fc22a5a.js">
+		<link rel="modulepreload" href="./build/immutable/components/pages/_page.svelte-d6d43e92.js">
 		<link rel="modulepreload" href="./build/immutable/modules/pages/_page.js-dc85b7cd.js">
 		<link rel="modulepreload" href="./build/immutable/chunks/_page-da46b06b.js"><title>Mini-Bank</title><!-- HEAD_svelte-27pv3k_START --><meta name="description" content="Mini-Bank"><!-- HEAD_svelte-27pv3k_END -->
 	</head>
@@ -31,23 +31,23 @@
 
 	<main class="svelte-1guv40x">
 
-<section class="svelte-1alot2l"><form><div style="position: relative;"><fieldset disabled class="svelte-1alot2l"><label><input class="upper-case united-width svelte-1alot2l" value=""></label>
-					<button class="svelte-1alot2l">🔍</button></fieldset>
+<section class="svelte-qa9mht"><form><div style="position: relative;"><fieldset disabled class="svelte-qa9mht"><label><input class="upper-case united-width svelte-qa9mht" value=""></label>
+					<button class="svelte-qa9mht">🔍</button></fieldset>
 
-				<div class="loader united-width svelte-1alot2l" style="display:none"><div style="display: flex; width: 3rem; height: 3rem;"><svg version="1.1" id="L4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 40 12" enable-background="new 0 0 0 0" xml:space="preserve"><circle fill="#f00" stroke="none" cx="6" cy="6" r="6"><animate attributeName="opacity" dur="1s" values="0;0.7;0" repeatCount="indefinite" begin="0.1"></animate></circle><circle fill="#0f0" stroke="none" cx="20" cy="6" r="6"><animate attributeName="opacity" dur="1s" values="0;0.7;0" repeatCount="indefinite" begin="0.2"></animate></circle><circle fill="#00f" stroke="none" cx="34" cy="6" r="6"><animate attributeName="opacity" dur="1s" values="0;0.7;0" repeatCount="indefinite" begin="0.3"></animate></circle></svg></div></div></div></form>
-		<div class="personage position-1 svelte-1alot2l"></div></section></main>
+				<div class="loader united-width svelte-qa9mht" style="display:none"><div style="display: flex; width: 3rem; height: 3rem;"><svg version="1.1" id="L4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 40 12" enable-background="new 0 0 0 0" xml:space="preserve"><circle fill="#f00" stroke="none" cx="6" cy="6" r="6"><animate attributeName="opacity" dur="1s" values="0;0.7;0" repeatCount="indefinite" begin="0.1"></animate></circle><circle fill="#0f0" stroke="none" cx="20" cy="6" r="6"><animate attributeName="opacity" dur="1s" values="0;0.7;0" repeatCount="indefinite" begin="0.2"></animate></circle><circle fill="#00f" stroke="none" cx="34" cy="6" r="6"><animate attributeName="opacity" dur="1s" values="0;0.7;0" repeatCount="indefinite" begin="0.3"></animate></circle></svg></div></div></div></form>
+		<div class="personage position-3 svelte-qa9mht"></div></section></main>
 
 	<footer class="svelte-1c5alfh"><span class="svelte-1c5alfh">© 2023 D-Velopment, Net.</span></footer></div>
 
 
-		<script type="module" data-sveltekit-hydrate="o5ucxp">
-			import { start } from "./build/immutable/start-ee7158b2.js";
+		<script type="module" data-sveltekit-hydrate="bq7hhb">
+			import { start } from "./build/immutable/start-9c5c6d6a.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="o5ucxp"]').parentNode,
-				version: "1674681345302",
+				target: document.querySelector('[data-sveltekit-hydrate="bq7hhb"]').parentNode,
+				version: "1674681654511",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
