Eesti Power updated

--- a/ee/index.html
+++ b/ee/index.html
@@ -3,17 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
+  <link rel="icon" href="./electro.png" />
+  <link rel="apple-touch-icon" href="./electro.png" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <title>Eesti Power Price</title>
-  <style>
-    html, body {
-      box-sizing: border-box;
-      font-family: system-ui, sans-serif;
-      margin: 7px;
-    }
-  </style>
-    <script defer src="bundle.js"></script>
-  </head>
-  <body></body>
-  </html>
+  <script defer src="bundle.js"></script>
+</head>
+<body></body>
+</html>
