--- a/ee/index.html
+++ b/ee/index.html
@@ -22,12 +22,11 @@
 <body></body>
 <script>
   if ('serviceWorker' in navigator) {
-     console.log("Will the service worker register?");
      navigator.serviceWorker.register('service-worker.js')
        .then(function(reg){
-         console.log("Yes, it did.");
+         console.log(reg);
       }).catch(function(err) {
-         console.log("No it didn't. This happened:", err)
+         console.log(err)
      });
   }
  </script>
